Fix alignment for toolbar elements

--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@ body {
   height: 45px;
   display: flex;
   flex-direction: row;
+  align-items: center;
   justify-content: space-between;
   font-size: 21px;
 }
